# simple_flask_server

./: LICENSE  README.md  pyproject.toml  setup.py
samples/: json-entry.py
simple_flask_server/: __main__.py
